# XunnetClient

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts
.github/workflows/: android-build.yml  desktop-build.yml  panel-build.yml  release-all.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  xunnet_core.cpp
app/src/main/java/dev/xunnet/client/: MainActivity.kt  XunnetApp.kt  XunnetApplication.kt
app/src/main/java/dev/xunnet/client/core/chain/: ChainBuilder.kt
app/src/main/java/dev/xunnet/client/core/data/local/: AppDatabase.kt  FederatedPanelDao.kt  ProfileDao.kt  SubscriptionDao.kt
app/src/main/java/dev/xunnet/client/core/data/local/entity/: FederatedPanelEntity.kt  ProfileEntity.kt  SubscriptionEntity.kt
app/src/main/java/dev/xunnet/client/core/data/remote/: FederationApi.kt  SubscriptionApi.kt  SubscriptionFetcher.kt
app/src/main/java/dev/xunnet/client/core/data/repository/: FederationRepositoryImpl.kt  ProfileRepositoryImpl.kt  SubscriptionRepositoryImpl.kt
app/src/main/java/dev/xunnet/client/core/diagnostics/: Diagnostics.kt
app/src/main/java/dev/xunnet/client/core/domain/model/: FederatedPanel.kt  Profile.kt  Stats.kt  Subscription.kt
app/src/main/java/dev/xunnet/client/core/domain/parser/: LinkParser.kt  XunCrypt.kt  XunnetLinkParser.kt
app/src/main/java/dev/xunnet/client/core/domain/repository/: FederationRepository.kt  ProfileRepository.kt  SubscriptionRepository.kt
app/src/main/java/dev/xunnet/client/core/health/: HealthChecker.kt
app/src/main/java/dev/xunnet/client/core/security/: KillSwitch.kt
app/src/main/java/dev/xunnet/client/core/settings/: SettingsRepository.kt
app/src/main/java/dev/xunnet/client/core/tunnel/: SingBoxAdapter.kt  SplitTunneling.kt  TunnelAdapter.kt  TunnelManager.kt  WireGuardAdapter.kt
app/src/main/java/dev/xunnet/client/core/vpn/: SingBoxCore.kt
app/src/main/java/dev/xunnet/client/di/: AppModule.kt
app/src/main/java/dev/xunnet/client/receiver/: BootReceiver.kt
app/src/main/java/dev/xunnet/client/ui/components/: ImportDialog.kt
app/src/main/java/dev/xunnet/client/ui/navigation/: Screen.kt
app/src/main/java/dev/xunnet/client/ui/screens/: DashboardScreen.kt  FederationScreen.kt  ProxiesScreen.kt  SettingsScreen.kt  SubscriptionsScreen.kt
app/src/main/java/dev/xunnet/client/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/dev/xunnet/client/ui/viewmodel/: DashboardViewModel.kt  FederationViewModel.kt  ProxiesViewModel.kt  SettingsViewModel.kt  SubscriptionsViewModel.kt
app/src/main/java/dev/xunnet/client/vpn/: XunnetVpnService.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/dev/xunnet/client/core/data/repository/: ProfileRepositoryImplTest.kt
app/src/test/java/dev/xunnet/client/core/domain/parser/: XunnetLinkParserTest.kt
core-libs/singbox/: build.sh
docs/: BUILD.md  CONFIG_FORMAT.md  CONTRIBUTING.md  FEDERATION.md  LINK_FORMAT.md  SPECIFICATION.md
examples/: xunnet-config.json  xunnet-link.txt
xunnet-desktop/: CMakeLists.txt  README.md
xunnet-desktop/resources/icons/: generate.ps1
xunnet-desktop/src/: main.cpp
xunnet-desktop/src/cli/: CliParser.cpp  CliParser.h
xunnet-desktop/src/core/: FederationManager.cpp  FederationManager.h  ProfileManager.cpp  ProfileManager.h  SubscriptionManager.cpp  SubscriptionManager.h  SystemProxy.cpp  SystemProxy.h  XunnetManager.cpp  XunnetManager.h
xunnet-desktop/src/tray/: TrayIcon.cpp  TrayIcon.h
xunnet-desktop/ui/: Dashboard.qml  Federation.qml  Proxies.qml  Settings.qml  main.qml
xunnet-panel/: Dockerfile  README.md  docker-compose.yml  go.mod  main.go
xunnet-panel/cmd/server/: main.go
xunnet-panel/internal/api/handlers/: federation.go  public.go  servers.go  stats.go  subscriptions.go  users.go
xunnet-panel/internal/api/middlewares/: auth.go  cors.go
xunnet-panel/internal/api/routes/: routes.go
xunnet-panel/internal/config/: config.go
xunnet-panel/internal/db/: db.go  models.go
xunnet-panel/web/: index.html  package.json  vite.config.ts  vitest.config.ts
xunnet-panel/web/src/: App.tsx  main.tsx  vitest.d.ts
xunnet-panel/web/src/test/: App.test.tsx  setup.ts
